# fulodev_api

./: blog.db  pyproject.toml  requirements.txt
blogapp/: main.py
